<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能社区</string>
    <string name="home_page">首页</string>
    <string name="server_page">服务</string>
    <string name="community_page">社区</string>
    <string name="me_page">我</string>
    <string name="update_time">[%s更新]</string>
    <string name="default_city">深圳</string>
    <string name="default_weather_cond">多云</string>
    <string name="default_temp_cond">10℃-20℃</string>

    <string name="notice">社区公告</string>
    <string name="tenement">联系物业</string>
    <string name="billPayment">账单缴费</string>
    <string name="smartLife">智慧生活</string>

    <string name="category_1">联系物业</string>
    <string name="category_2">账单缴费</string>
    <string name="category_6">智慧生活</string>
    <string name="category_7">社区公告</string>

    <string name="around_shop">周边商家</string>

    <string name="name">肯德基(科技园店)</string>
    <string name="price">￥%s/人</string>
    <string name="distance">距离%dm</string>
    <string name="tel">tel:%s</string>
    <string name="addr">地址:%s</string>

    <string name="home_title">首页</string>
    <string name="server_title">服务</string>
    <string name="community_title">社区</string>
    <string name="me_title">我</string>

    <string name="tenement_server">咨询及报修</string>
    <string name="tenement_address">地址: </string>
    <string name="tenement_time">时间: </string>
    <string name="community_introduce">小区介绍</string>
    <string name="tenement_phone">电话联系</string>

    <string name="address">广东省深圳市南山区科技园智能小区1栋101室</string>
    <string name="time">09:00 - 18:00</string>

    <string name="water_charge">水费</string>
    <string name="electric_charge">电费</string>
    <string name="gas_charge">煤气费</string>
    <string name="broadband_charge">宽带费</string>
    <string name="tv_charge">有线电视费</string>
    <string name="user_number">请输入用户编号</string>
    <string name="search">查询</string>

    <string name="lamp">灯</string>
    <string name="air_condition">空调</string>
    <string name="refrigerator">冰箱</string>
    <string name="washing_machine">洗衣机</string>

    <string name="notice_context">消防局10月20日早上8点在小区广场进行消防知识宣传活动，请大家积极参加！</string>

    <string name="no_data_tips">附近暂无相关数据</string>

    <!-- 服务页 -->
    <string name="server_category_1">家政服务</string>
    <string name="server_category_2">家电维修</string>
    <string name="server_category_3">超市</string>
    <string name="server_category_4">快递</string>
    <string name="server_category_5">医院</string>
    <string name="server_category_6">餐饮服务</string>
    <string name="server_category_7">银行</string>
    <string name="server_category_8">旅游景点</string>

    <!-- 我的社区 -->
    <string name="community_category_1">活动</string>
    <string name="community_category_2">团购</string>
    <string name="community_category_3">二手市场</string>
    <string name="community_category_4">兴趣</string>
    <string name="community_category_5">美食</string>
    <string name="community_category_6">我的邻居</string>

    <!-- 我 -->
    <string name="me_login_info">登录信息</string>
    <string name="me_order">我的订单</string>
    <string name="me_neighbor">我的邻居</string>
    <string name="me_settings">设置</string>
    <string name="me_server_phone">服务电话</string>

    <string name="user_info">个人信息</string>

    <string name="me_default_userid">昵称</string>
    <string name="me_default_sinagture">签名</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_lamp">LampActivity</string>
    <string name="title_activity_air_condition">AirConditionActivity</string>
    <string name="title_activity_refrigerator">RefrigeratorActivity</string>
    <string name="title_activity_washing_machine">WashingMachineActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">注册</string>
    <string name="error_invalid_phone">输入的手机号不正确</string>
    <string name="error_invalid_password">输入的密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">手机号不能为空</string>
    <string name="no_account_and_register">没有账户？现在注册</string>

    <string name="prompt_name">昵称</string>
    <string name="register">注册</string>
    <string name="have_account_and_login">已有账户？登录</string>
    <string name="error_invalid_name">昵称不能为空</string>
    <string name="error_register">注册失败</string>

    <string name="user_info_edit">修改信息</string>
    <string name="title_activity_avatar">图片详情</string>
    <string name="title_activity_user_info_edit">UserInfoEditActivity</string>

    <string name="user_nickname">昵称</string>
    <string name="user_avatar">头像</string>
    <string name="user_signature">个性签名</string>
    <string name="user_address">我的地址</string>
    <string name="user_password_edit">修改密码</string>

    <string name="button_save">提交</string>
    <string name="title_activity_edit_nickname">修改昵称</string>
    <string name="title_activity_edit_sinagture">修改签名</string>
    <string name="title_activity_edit_password">修改密码</string>

    <string name="old_password">旧密码: </string>
    <string name="new_password">新密码: </string>
    <string name="confirm_password">确认密码: </string>

    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new2_password">请再次输入新密码</string>


    <string name="nickname_need_not_empty">昵称不能为空</string>
    <string name="nickname_not_change">昵称没有改变</string>

    <string name="new_passowrd_need_not_empty">新密码不能为空</string>
    <string name="passowrd_not_change">密码没有改变</string>
    <string name="input_old_passowrd_error">旧密码错误</string>
    <string name="input_passowrd_not_same">二次输入密码不相同</string>

    <string name="about">关于</string>
    <string name="suggest">建议与反馈</string>
    <string name="version_info">版本信息</string>
    <string name="btn_logout">退出登录</string>

    <string name="suggest_and_feedback">建议与反馈</string>


    <string name="sinagture_not_change">签名没有改变</string>
    <string name="title_activity_shop_profile">ShopProfileActivity</string>
    <string name="title_activity_server_profile">ServerProfileActivity</string>
    <string name="title_activity_service_category">ServiceCategoryActivity</string>


    <string name="default_name">名称</string>
    <string name="default_address">深圳市南山区科技园</string>
    <string name="default_product">产品介绍</string>
    <string name="default_product_detail">1、产品简介：产品简介是产品介绍中最为关键的部分，也是说明产品是什么的部分。
        \n 2、产品功能：产品功能也是需要简要说明的部分之一。
        \n 3、产品原理。这部分不同的产品写法大致相同，如配料什么、配料具有哪些功能，借助某些材料的功能从而实现什么功效等等。
        \n 4、产品保质期、注意事项、使用方法等。</string>
    <string name="default_shop_profile">商家介绍</string>
    <string name="default_shop_detail">介绍商户的基本情况，用简要的文字把一个商户的最主要的特点、特色、基本情况介绍清楚</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_suggest">SuggestActivity</string>
    <string name="title_activity_version_info">VersionInfoActivity</string>
    <string name="title_activity_webview_ui">WebviewUI</string>
</resources>
