<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_size"
        android:background="@color/status_bar" >

        <TextView
            android:id="@+id/me_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/tenement"
            android:textSize="@dimen/text_size_24sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_tenement_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tenement_server"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_size_20"
        android:layout_marginLeft="@dimen/margin_size_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenement_time"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:id="@+id/tv_tenement_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="@dimen/text_size_18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_size_6"
        android:layout_marginLeft="@dimen/margin_size_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenement_address"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:id="@+id/tv_tenement_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="@dimen/text_size_18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_tenement_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_14"
        android:layout_marginLeft="@dimen/margin_size_16"
        android:layout_marginRight="@dimen/margin_size_16"
        android:text="@string/tenement_phone"
        android:textSize="@dimen/text_size_18sp" />
</LinearLayout>
