<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stev.smart_community.me.EditPasswordActivity">

    <include layout="@layout/action_bar_view" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_20dp"
        android:layout_marginRight="@dimen/size_20dp"
        android:layout_marginTop="@dimen/size_30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/size_100dp"
                android:layout_height="match_parent"
                android:text="@string/old_password"
                android:gravity="center_vertical|left"
                android:textSize="@dimen/text_size_20sp"/>

            <EditText
                android:id="@+id/edit_old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="16"
                android:background="@color/white"
                android:gravity="center_vertical|right"
                android:hint="@string/please_input_old_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/size_100dp"
                android:layout_height="match_parent"
                android:text="@string/new_password"
                android:gravity="center_vertical|left"
                android:textSize="@dimen/text_size_20sp"/>

            <EditText
                android:id="@+id/edit_new1_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:maxLength="16"
                android:background="@color/white"
                android:gravity="center_vertical|right"
                android:hint="@string/please_input_new_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50dp"
            android:layout_marginTop="@dimen/size_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/size_100dp"
                android:layout_height="match_parent"
                android:text="@string/confirm_password"
                android:gravity="center_vertical|left"
                android:textSize="@dimen/text_size_20sp"/>

            <EditText
                android:id="@+id/edit_new2_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:maxLength="16"
                android:background="@color/white"
                android:gravity="center_vertical|right"
                android:hint="@string/please_input_new2_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_20sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_48dp"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/turquoise"
            android:text="@string/button_save"/>
    </LinearLayout>
</LinearLayout>
