<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stev.smart_community.home.PaymentActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_size"
        android:background="@color/status_bar" >

        <TextView
            android:id="@+id/me_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/billPayment"
            android:textSize="@dimen/text_size_24sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/user_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_size_16"
        android:hint="@string/user_number"/>

    <Button
        android:id="@+id/paymen_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>

</LinearLayout>
