<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stev.smart_community.me.SettingsActivity">

    <include layout="@layout/action_bar_view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/about"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/size_48dp"
                android:background="@drawable/btn_select"
                android:paddingLeft="@dimen/margin_size_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/about"
                    android:textSize="@dimen/text_size_18sp"/>

                <ImageView
                    android:layout_width="@dimen/size_10dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_size_20"
                    android:src="@drawable/sub_btn_right_image"/>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#33000000"/>

            <RelativeLayout
                android:id="@+id/suggest"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/size_48dp"
                android:background="@drawable/btn_select"
                android:paddingLeft="@dimen/margin_size_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/suggest"
                    android:textSize="@dimen/text_size_18sp"/>

                <ImageView
                    android:layout_width="@dimen/size_10dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_size_20"
                    android:src="@drawable/sub_btn_right_image"/>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#33000000"/>

            <RelativeLayout
                android:id="@+id/version_info"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/size_48dp"
                android:background="@drawable/btn_select"
                android:paddingLeft="@dimen/margin_size_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/version_info"
                    android:textSize="@dimen/text_size_18sp"/>

                <ImageView
                    android:layout_width="@dimen/size_10dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_size_20"
                    android:src="@drawable/sub_btn_right_image"/>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#33000000"/>

            <RelativeLayout
                android:id="@+id/user_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/size_48dp"
                android:background="@drawable/btn_select"
                android:paddingLeft="@dimen/margin_size_20"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/user_password_edit"
                    android:textSize="@dimen/text_size_18sp"/>

                <ImageView
                    android:layout_width="@dimen/size_10dp"
                    android:layout_height="@dimen/size_20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_size_20"
                    android:src="@drawable/sub_btn_right_image"/>
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#33000000"/>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:layout_marginLeft="@dimen/size_10dp"
                android:layout_marginRight="@dimen/size_10dp"
                android:textColor="@color/turquoise"
                android:textSize="@dimen/text_size_24sp"
                android:text="@string/btn_logout"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
